# EG4012-BVC

./: .gitignore  CMakeLists.txt  README.md  first.ppm
src/: CMakeLists.txt
src/bvc_common/: bitstream.cpp  bitstream.h  entropy.h  format.h  frame_parameter_set.h  log.h  matrix.cpp  matrix.h  nal.h  picture.h  picture_info.h  vector.h  verbosity.h  wavelet.cpp  wavelet.h
src/bvc_common/bitstream/: bitstream.cpp  bitstream.h
src/bvc_common/entropy/: entropy.h
src/bvc_common/entropy/huffman/: huffman_node.cpp  huffman_node.h  node.h
src/bvc_common/huffman/: huffman.h  huffman_node.cpp  huffman_node.h  linked_list.h
src/bvc_common/linked_list/: linked_list.h
src/bvc_common/math/: matrix.cpp  matrix.h
src/bvc_common/partition/: partition.h
src/bvc_common/spiht/: spiht.cpp  spiht.h  spiht_config.h
src/bvc_common/util/: matrix.cpp  matrix.h
src/bvc_common/wavelet/: haar.cpp  matrix.h  vector.h  wavelet.cpp  wavelet.h  wavelet_config.h
src/bvc_common/wavelet/biorthogonal/: biorthogonal.cpp  biorthogonal.h  biorthogonal_config.h
src/bvc_common/wavelet/coiflets/: coiflets.cpp  coiflets.h  coiflets_config.h
src/bvc_common/wavelet/daubechies/: daubechies.cpp  daubechies.h  daubechies_config.h
src/bvc_common/wavelet/haar/: haar.h  haar_config.h  harr_config.h
src/bvc_common/wavelet/reverse_biorthogonal/: reverse_biorthogonal.cpp  reverse_biorthogonal.h  reverse_biorthogonal_config.h
src/bvc_common/wavelet/symlets/: symlets.cpp  symlets.h  symlets_config.h
src/bvc_dec/: README.md  bvc_dec.cpp  bvc_dec.h  config.h  info.h  nal.h  picture.h  result.h
src/bvc_dec/entropy/: README.md  decoder.h  decoder_factory.cpp  decoder_factory.h  entropy_decoder.h  entropy_decoder_factory.cpp  entropy_decoder_factory.h
src/bvc_dec/entropy/abac/: decoder.cpp  decoder.h
src/bvc_dec/entropy/arithmetic/: decoder.cpp  decoder.h
src/bvc_dec/entropy/huffman/: decoder.cpp  decoder.h
src/bvc_dec/entropy/skip/: decoder.cpp  decoder.h
src/bvc_dec/entropy_coding/: entropy_decoder.h  entropy_decoder_factory.cpp  entropy_decoder_factory.h
src/bvc_dec/entropy_coding/abac/: abac.cpp  abac.h  abac_decoder.cpp  abac_decoder.h  decoder.cpp  decoder.h
src/bvc_dec/entropy_coding/cabac/: cabac.cpp  cabac.h  context.h
src/bvc_dec/entropy_coding/huffman/: decoder.cpp  huffman_decoder.cpp  huffman_decoder.h
src/bvc_dec/partition/: departitioner.h  departitioner_factory.cpp  departitioner_factory.h
src/bvc_dec/spiht/: decoder.cpp  decoder.h  decoder_factory.cpp  decoder_factory.h
src/bvc_dec/spiht/skip/: decoder.cpp  (+1 more)
src/bvc_dec/wavelet/: recomposer.h  recomposer_factory.cpp  recomposer_factory.h  wavelet_recomposer.h  wavelet_recomposer_factory.cpp  wavelet_recomposer_factory.h  wavelet_reconstructor.h  wavelet_reconstructor_factory.cpp  wavelet_reconstructor_factory.h
src/bvc_enc/: bcv_enc.h  bvc_enc.cpp  bvc_enc.h  config.h  nal.h  result.h
src/bvc_enc/entropy/: README.md  encoder.h  encoder_factory.cpp  encoder_factory.h  entropy_encoder.h  entropy_encoder_factory.cpp
src/bvc_enc/entropy_coding/: entropy_coder.h  entropy_coder_factory.cpp  entropy_coder_factory.h  entropy_encoder.h  entropy_encoder_factory.cpp  entropy_encoder_factory.h
src/bvc_enc/partition/: partitioner.h  partitioner_factory.cpp  partitioner_factory.h
src/bvc_enc/spiht/: encoder.cpp  encoder.h  encoder_factory.cpp  encoder_factory.h  spiht_encoder.cpp  spiht_encoder.h
src/bvc_enc/wavelet/: decomposer.h  decomposer_factory.cpp  decomposer_factory.h  wavelet_decomposer.h  wavelet_decomposer_factory.cpp  wavelet_decomposer_factory.h
src/ovc_common/: format.h  log.h  nal.h  picture.h  picture_info.h  plane.h  verbosity.h
src/ovc_common/bitstream/: bitstream.cpp  bitstream.h
src/ovc_common/compress/: compress.h  compress_config.h
src/ovc_common/entropy/: entropy.h
src/ovc_common/fec/: fec.h
src/ovc_common/interleave/: interleave.h  interleave_config.h
src/ovc_common/linked_list/: linked_list.h
src/ovc_common/log/: log.cpp  log.h
src/ovc_common/math/: matrix.cpp  matrix.h  vector.h
src/ovc_common/partition/: partition.h
src/ovc_common/spiht/: spiht.cpp  spiht.h  spiht_config.h
src/ovc_common/util/: util.cpp  util.h
src/ovc_common/wavelet/: wavelet.cpp  wavelet.h  wavelet_config.h
src/ovc_dec/: config.h  decoder.cpp  decoder.h  ovc_dec.cpp  ovc_dec.h  result.h
src/ovc_dec/compress/: decompressor.h  decompressor_factory.cpp  decompressor_factory.h
src/ovc_dec/entropy/: README.md  decoder.h  decoder_factory.cpp  decoder_factory.h
src/ovc_dec/interleave/: deinterleaver.h  deinterleaver_factory.cpp  deinterleaver_factory.h
src/ovc_dec/partition/: departitioner.h  departitioner_factory.cpp  departitioner_factory.h
src/ovc_dec/spiht/: decoder.h  decoder_factory.cpp  decoder_factory.h
src/ovc_dec/wavelet/: recomposer.h  recomposer_factory.cpp  recomposer_factory.h
src/ovc_enc/: README.md  config.h  encoder.cpp  encoder.h  ovc_enc.cpp  ovc_enc.h  preset.h  result.h
src/ovc_enc/compress/: compressor.h  compressor_factory.cpp  compressor_factory.h
src/ovc_enc/entropy/: README.md  encoder.h  encoder_factory.cpp  encoder_factory.h
src/ovc_enc/interleave/: interleaver.h  interleaver_factory.cpp  interleaver_factory.h
src/ovc_enc/partition/: README.md  partitioner.h  partitioner_factory.cpp  partitioner_factory.h
src/ovc_enc/spiht/: encoder.h  encoder_factory.cpp  encoder_factory.h
src/ovc_enc/wavelet/: decomposer.h  decomposer_factory.cpp  decomposer_factory.h
test/: CMakeLists.txt  main.cpp
test/decode/: decode_test.cpp  decode_test.h
test/e2e/: e2e.cpp  e2e_test.cpp  e2e_test.h
test/encode/: encode_test.cpp  encode_test.h
test/entropy/: encoding_test.cpp  encoding_test.h  entropy_test.cpp  entropy_test.h
test/interleave/: interleave_test.cpp  interleave_test.h
test/misc/: lenna.cpp  lenna.h  lenna_stream_1_pre-spiht.csv  lenna_stream_1_pre-spiht.txt
test/partition/: partition_test.cpp  partition_test.h
test/resilience/: resilience_test.cpp  resilience_test.h
test/util/: ppm.cpp  ppm.h
test/wavelet/: wavelet_test.cpp  wavelet_test.h
(+183 files in other folders)
